# blackheaven.github.io

./: .gitignore  .gitmodules  404.html  CNAME  atom.xml  config.toml  flake.nix  index.html  main.css  package.json  robots.txt  search_index.en.js  site.webmanifest  sitemap.xml
.github/ISSUE_TEMPLATE/: log-idea.md  log-remark.md  project-idea.md  request-for-contribution.md
.github/workflows/: build.yml  publish-pages.yml  publish.yml
2022-11/contributors-management/: index.html
2022-11/gdcr-summary/: index.html
2022-11/hacktoberfest-contributions/: index.html
2022-11/hacktoberfest-feedback/: index.html
2022-11/initial-log/: index.html
2022-11/polysemy-effectrow/: index.html
2022-11/polysemy-interpreters-intro/: index.html
2022-11/polysemy-intro/: index.html
2022-11/write-for-debug/: index.html
2022-12/polysemy-effect-definition-intro/: index.html
2022-12/polysemy-effect-interpretation-intro/: index.html
2022-12/polysemy-effectrow-design/: index.html
2022-12/polysemy-interceptors-buffering/: index.html
2022-12/polysemy-interceptors-intro/: index.html
2022-12/polysemy-interpretation-effects-injection/: index.html
2022-12/polysemy-interpretation-effects-inline-injection/: index.html
2022-12/polysemy-tagged-effects/: index.html
2023-01/polysemy-async/: index.html
2023-01/polysemy-embed/: index.html
2023-01/polysemy-final/: index.html
2023-01/polysemy-hoe-final/: index.html
2023-01/polysemy-hoe-intro/: index.html
2023-01/polysemy-input/: index.html
2023-01/polysemy-strategies-binding/: index.html
2023-01/polysemy-tactics-binding/: index.html
2023-01/polysemy-tactics-binding-deprecated-workaround/: index.html
2023-02/polysemy-atomicstate/: index.html
2023-02/polysemy-bundle/: index.html
2023-02/polysemy-changing-return/: index.html
2023-02/polysemy-final-vs-embed/: index.html
2023-02/polysemy-fixpoint/: index.html
2023-02/polysemy-hoe-combined-interpreters/: index.html
2023-02/polysemy-io/: index.html
2023-02/polysemy-nondet/: index.html
2023-03/plutus-c4-l1-l2/: index.html
2023-03/plutus-c4-l3/: index.html
2023-03/plutus-c4-l4/: index.html
2023-03/plutus-c4-ouroboros/: index.html
2023-03/polysemy-async-gotchas/: index.html
2023-03/polysemy-design-heuristics-effects-layering/: index.html
2023-03/polysemy-design-heuristics-io-hunting/: index.html
2023-03/polysemy-design-heuristics-srp/: index.html
about/: index.html
activities/: index.html
blog/: index.html
categories/: index.html
content/: 2022-11-01_initial.md  2022-11-06_gdcr-summary.md  2022-11-09_write-for-debug.md  2022-11-13_hacktoberfest-contributions.md  2022-11-16_hacktoberfest-feedback.md  2022-11-20_contributors-management.md  2022-11-23_polysemy-intro.md  2022-11-27_polysemy-interpreters-intro.md  2022-11-30_polysemy-effectrow.md  2022-12-04_polysemy-effectrow-design.md  2022-12-07_polysemy-effect-definition-intro.md  2022-12-11_polysemy-effect-interpretation-intro.md  2022-12-14_polysemy-interpretation-effects-injection.md  2022-12-18_polysemy-interpretation-effects-inline-injection.md  2022-12-21_polysemy-tagged-effects.md  2022-12-25_polysemy-interceptors-intro.md  2022-12-28_polysemy-interceptors-buffering.md  2023-01-01_polysemy-embed.md  2023-01-04_polysemy-input.md  2023-01-11_polysemy-final.md  2023-01-15_polysemy-hoe-final.md  2023-01-18_polysemy-async.md  2023-01-22_polysemy-strategies-binding.md  2023-01-25_polysemy-hoe-tactics-binding.md  2023-01-29_polysemy-hoe-tactics-binding-deprecated-workaround.md  2023-02-01_polysemy-final-vs-embed.md  2023-02-05_polysemy-hoe-combined-interpreters.md  2023-02-12_polysemy-fixpoint.md  2023-02-19_polysemy-nondet.md  2023-03-01_polysemy-strategy-internals.md  2023-03-05_plutus_cohort4-l1-l2.md  2023-03-12_plutus-cohort4-l3.md  2023-03-12_plutus_cohort4-l2.md  2023-03-12_plutus_cohort4-l3.md  2023-03-15_polysemy-design-heuristics-io-hunting.md  2023-03-19_plutus_cohort4_ouroboros.md  2023-03-26_plutus-cohort4-l4.md  2023-03-29_polysemy-design-heuristics-effects-layering.md  2023-04-02_plutus_cohort4_l5.md  2023-04-05_polysemy-design-heuristics-grouping-interpreters.md  (+109 more)
content/code/monad/: cabal.project  flake.nix  monad.cabal
content/code/monad/src/: BadMonad.hs
content/code/polysemy/: flake.nix  playground.cabal
content/code/polysemy/src/: AsyncGotchas.hs  AtomicState.hs  Bind.hs  Bundle.hs  DesignHeuristicsDispatching.hs  DesignHeuristicsEffectsLayering.hs  DesignHeuristicsHidingExposing.hs  DesignHeuristicsHidingInterpreters.hs  DesignHeuristicsIO.hs  DesignHeuristicsSrp.hs  EffectDefinitionIntro.hs  EffectInjection.hs  EffectInlineInjection.hs  EffectInterpretationIntro.hs  EffectRow.hs  EffectRowDesign.hs  Embed.hs  Final.hs  Fixpoint.hs  HoE.hs  IO.hs  Input.hs  Interceptors.hs  InterpretersCombination.hs  Intro.hs  NonDet.hs  Onion.hs  Tagged.hs
content/code/reflection/: cabal.project  flake.nix  reflection.cabal
content/code/reflection/test/: Spec.hs
foss/: index.html
hiring/: index.html
posts/: index.html
privacy/: index.html
static/: CNAME
tags/: index.html
talks/: index.html
(+488 files in other folders)
