cabal-version:       3.0
name:                playground
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            A playground
description:         A playground.
Homepage:            http://github.com/blackheaven/blackheaven.github.io
tested-with:         GHC==9.2.3

library
  default-language:   Haskell2010
  build-depends:
      base == 4.*
    , polysemy
    , polysemy-plugin
    , containers
  hs-source-dirs: src
  exposed-modules:
      Intro
      EffectRow
      EffectRowDesign
      EffectDefinitionIntro
      EffectInterpretationIntro
      EffectInjection
      EffectInlineInjection
      Tagged
      Interceptors
      Embed
      Input
      HoE
  other-modules:
      Paths_playground
  autogen-modules:
      Paths_playground
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable playground
  -- type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: app
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , playground
  default-language: Haskell2010
