cabal-version:       3.0
name:                reflection
version:             0.1.0.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Experimenting reflexion
description:         Experimenting reflexion.
Homepage:            http://github.com/blackheaven/blackheaven.github.io
tested-with:         GHC==9.4.3

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Paths_reflection
  autogen-modules:
      Paths_reflection
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      -- OverloadedLists
      OverloadedRecordDot
      -- OverloadedStrings
      QuasiQuotes
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hspec
  default-language: Haskell2010
